Added ads to region pages. Small bug fixes.

--- a/src/pages/regions/big-bend-country.mdx
+++ b/src/pages/regions/big-bend-country.mdx
@@ -21,7 +21,7 @@ Adventure, scenic hikes, and wide-open spaces beckon visitors to landscapes litt
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={12} colMd={4} colLg={8}>
 
 ## **Big Bend for Everyone**
 ### The remote landscapes of West Texas beckon visitors year-round
@@ -57,11 +57,25 @@ As the trail ascends through rocky walls swimming with fossilized seashells, the
 
 </Column>
 
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad04']}/>
+<AdGroup id={['ad02']}/>
+</Column>
+
+</Row>
+
+<Row>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad01']}/>
+</Column>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad03']}/>
+</Column>
 </Row>
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={12} colMd={4} colLg={8}>
 
 
 ![A child places his head in a large dinosaur head replica and imitates the open jaw](images/big-bend-fossil-exhibit.jpg)
@@ -109,7 +123,15 @@ For more information, directions, and amenities, get your [free mobile guide to 
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={6} colMd={6} colLg={8}>
 <RegionListing title="Big Bend Country" color="orange" region="BIG BEND COUNTRY"/>
 </Column>
+
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad04']}/>
+<AdGroup id={['ad01']}/>
+<AdGroup id={['ad03']}/>
+<AdGroup id={['ad02']}/>
+</Column>
+
 </Row>
