--- a/src/pages/regions/gulf-coast.mdx
+++ b/src/pages/regions/gulf-coast.mdx
@@ -21,7 +21,7 @@ Beaches, art, history, and wildlife merge in a place where big-city sophisticati
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={6} colMd={4} colLg={8}>
 
 ## **Return to Relaxation**
 ### Aransas Pass offers a briny paradise along the Gulf Coast 
@@ -53,9 +53,14 @@ Pick the first Saturday of the month to tour a military history museum at McCamp
 
 “I use my educational background to take people down a memory lane that is fast disappearing,” says Robert Perry, honorary CAF “colonel” and self-described Marines brat.
 
+![The outside of a light blue building with a black sign reading "Bakery Cafe"](images/gulf-coast-bakery-cafe.jpg)
+<Caption>Bakery Cafe in Aransas Pass. Photo by Nathan Lindstrom.</Caption>
+
 </Column>
 
-<Column colSm={12} colMd={2} colLg={4}>
+<Column colSm={6} colMd={4} colLg={4}>
+
+<AdGroup id={['ad09']}/>
 
 ![A fisherman holds two nets and looks at the sunset on the Texas coast](images/port-aransas-state-parks-hidden-gem.jpg)
 <Caption>Mustang Island State Park. Photo by Will van Overbeek.</Caption>
@@ -85,10 +90,15 @@ For more information, directions, and amenities, get your [free mobile guide to 
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={6} colMd={4} colLg={6}>
+<AdGroup id={['ad10','ad17','ad19']}/>
+</Column>
+<Column colSm={6} colMd={3} colLg={4}>
+</Column>
+</Row>
 
-![The outside of a light blue building with a black sign reading "Bakery Cafe"](images/gulf-coast-bakery-cafe.jpg)
-<Caption>Bakery Cafe in Aransas Pass. Photo by Nathan Lindstrom.</Caption>
+<Row>
+<Column colSm={12} colMd={6} colLg={8}>
 
 The afternoon agenda starts with lunch at an Aransas Pass institution, Bakery Cafe (circa 1929), now owned by Aransas Pass Mayor Ramiro Gomez. Daily specials often include turkey and dressing, chicken fried steak, fish and shrimp, and pork cutlets. Their everyday never-frozen hamburgers won’t disappoint either. Word spreads fast if Ramiro’s wife, Orsalinda “Orfa” Gomez, bakes a carrot cake or longtime cook Cruz Hernandez whips up bread pudding drizzled with pecan sauce.
 
@@ -101,11 +111,20 @@ Start your final afternoon at Conn Brown Harbor. Chuck West, Aransas Pass’ har
 It is “a place for private thoughts,” West says, “and it serves as a place for solace.”
 
 </Column>
+
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad06','ad20']}/>
+</Column>
+
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
-<RegionListing title="Gulf Coast" color="lightblue" region="GULF COAST"/>
+<Column colSm={12} colMd={4} colLg={8}>
+<RegionListing title="Gulf Coast" color="lightblue" region="GULF COAST" ads={['ad10','ad17','ad19','ad05','ad14','ad16','ad07','ad21','ad22','ad08','ad11','ad12']}/>
+</Column>
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad09','ad06','ad20']}/>
+<AdGroup id={['ad13','ad15','ad18']}/>
 </Column>
 </Row>
 
