--- a/src/pages/regions/panhandle-plains.mdx
+++ b/src/pages/regions/panhandle-plains.mdx
@@ -21,7 +21,7 @@ Big skies, sweeping sunsets, and breathtaking vistas characterize this region, w
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={12} colMd={4} colLg={8}>
 
 ## **Creative Hub**
 ### Lubbock’s art scene flourishes from deep High Plains roots
@@ -35,16 +35,28 @@ Lubbock may not be the first city that comes to mind when considering the arts i
 For a whopping taste of the art buzz in Lubbock, head over to the First Friday Art Trail, a monthly crescendo of creativity in the Lubbock Cultural District. Charles Adams Studio Project—a nonprofit that supports local artists with workshops, studio space, and an artist-in-residence program—is central to the action. In the gallery of CASP’s founder, Charles Adams, works such as the sweeping landscapes by contemporary photographer Ashton Thornhill are proof that, as Adams explains, you can capture the Texas countryside without always “cowboying it up.” If your visit doesn’t coincide with the first Friday of the month, you can still head over to the Cultural District’s Two Docs Brewing Co. and admire the surrounding architecture and whimsical murals. It will be much quieter than it is during FFAT, but you can still soak up some of the art vibe.
 
 You can’t come to the hometown of Buddy Holly and Joe Ely and not see any live music. When the much-anticipated 2,200-seat Buddy Holly Hall of Performing Arts and Sciences opens this year, the high-tech $154 million facility will rival any theater in the country. In the meantime, spend a little time on musical sacred ground on Buddy Holly Avenue in the Depot Entertainment District. The divey Blue Light Live—where Lubbock native Amanda Shires and her husband, Jason Isbell, played often before they hit it big—is home to Lubbock’s best Red Dirt bands—like Flatland Cavalry—catch them if you can. Also on Buddy Holly Avenue, the historic art deco Cactus Theater brings in big Texas talent like Patty Griffin and Kelly Willis.
+
+Lubbock makes it easy to get artsy. Sign up for an affordable printmaking class with the capable staff at the Helen DeVitt Jones Print Studio, one of CASP’s facilities, and walk away with work worthy of hanging on your wall. Check the CASP website (casp-arts.org) for upcoming classes or arrange your own group lesson. Nearby, the Louise Hopkins Underwood Center for the Arts is a community art hub that—like CASP—is leading Lubbock’s artistic renaissance. Visit its galleries and check the events calendar; with clay workshops, sound meditations, and contra dances, LHUCA helps you get your own creative juices flowing. 
+
+</Column>
+
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad37']}/>
+<AdGroup id={['ad36']}/>
+<AdGroup id={['ad45']}/>
 </Column>
 
 </Row>
 
+<Row>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad39','ad42','ad44']}/>
+</Column>
+</Row>
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
-
-Lubbock makes it easy to get artsy. Sign up for an affordable printmaking class with the capable staff at the Helen DeVitt Jones Print Studio, one of CASP’s facilities, and walk away with work worthy of hanging on your wall. Check the CASP website (casp-arts.org) for upcoming classes or arrange your own group lesson. Nearby, the Louise Hopkins Underwood Center for the Arts is a community art hub that—like CASP—is leading Lubbock’s artistic renaissance. Visit its galleries and check the events calendar; with clay workshops, sound meditations, and contra dances, LHUCA helps you get your own creative juices flowing. 
+<Column colSm={12} colMd={4} colLg={8}>
 
 “If you want to make art in Lubbock, you can do it,” says Chad Plunket, director of CASP, affirming the city’s can-do artistic spirit. “It’s an affordable town. And so if you have an idea, well, do it. There are other people who’ll help you. I think that LHUCA and CASP are just examples of that. We now sort of own a whole downtown city block that’s dedicated to the arts. I do think that’s unique to Lubbock and the West Texas hard-work mentality—things can happen here.”
 
@@ -62,7 +74,7 @@ A quiet Sunday morning in Lubbock is an ideal time go for a stroll through Texas
 
 </Column>
 
-<Column colSm={12} colMd={2} colLg={4}>
+<Column colSm={12} colMd={4} colLg={4}>
 
 ![People sit at a picnic table underneath a rock shelter in the setting sun](images/panhandle-big-spring-state-park.jpg)
 <Caption>Big Spring State Park. Photo by Will van Overbeek.</Caption>
@@ -86,13 +98,20 @@ Hike, bike, or ride horses along 90-plus miles of trails. Camp, geocache, or go 
 - Possum Kingdom SP
 - San Angelo SP
 
+<AdGroup id={['ad41']}/>
 
 </Column>
 
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
-<RegionListing title="Panhandle Plains" color="red" region="PANHANDLE PLAINS"/>
+<Column colSm={12} colMd={4} colLg={8}>
+<RegionListing title="Panhandle Plains" color="red" region="PANHANDLE PLAINS" ads={['ad39','ad42','ad44']}/>
 </Column>
+
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad37','ad36','ad45','ad41','ad39']}/>
+<AdGroup id={['ad42','ad44','ad40','ad38','ad43']}/>
+</Column>
+
 </Row>
