--- a/src/pages/regions/piney-woods.mdx
+++ b/src/pages/regions/piney-woods.mdx
@@ -21,7 +21,7 @@ History and nature attract visitors to this region cloaked in majestic forests a
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={12} colMd={4} colLg={8}>
 
 ## **New Trips in Old Areas**
 ### The Post Oak Savannah region of East Texas is famous for its fishing, railroad history, and foliage
@@ -39,10 +39,41 @@ After you’ve filled your trunk with newfound treasures, head 30 miles northwes
 
 </Column>
 
-<Column colSm={12} colMd={2} colLg={4}>
+<Column colSm={12} colMd={4} colLg={4}>
+
+<AdGroup id={['ad46']}/>
 
 ![A person in a life jacket paddles a kayak on blue water and green trees](images/huntsville-state-park-piney-woods.jpg)
 <Caption>Huntsville State Park. Photo by Will van Overbeek.</Caption>
+
+</Column>
+</Row>
+
+<Row>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad47']}/>
+</Column>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad53']}/>
+</Column>
+</Row>
+
+<Row>
+
+<Column colSm={12} colMd={4} colLg={8}>
+
+![Fried catfish, coleslaw, fries, and hushpuppies in a red-checkered paper-lined basket](images/catfish-plate-boathouse-bar-grill.jpg)
+<Caption>Catfish plate at The Boathouse Bar & Grill, Post Oak Savannah. Photo by Dave Shafer.</Caption>
+
+The Texas Freshwater Fisheries Center on Lake Athens has exhibits featuring assorted aquatic environments and an alligator enclosure. Other attractions include the Texas Freshwater Fishing Hall of Fame, which offers plaques and videos dedicated to the many anglers, writers, and business people who have made the Lone Star State a world-class destination for fishing. Athens is also where the Texas Parks and Wildlife Toyota ShareLunker Program—dedicated to growing bigger largemouth bass in Texas—is headquartered. A gallery offers taxidermy models of some of the largest fish ever pulled from Texas lakes and rivers. There’s also a chance to see the “lunker bunker” where bass are bred, and a tram tour of the production ponds covering 37 acres. Afterward, try your luck at the center’s pond, where trout, catfish, and bluegill are stocked. Rods, tackle, and bait are provided with the price of admission.
+
+The peaceful 104-acre East Texas Arboretum and Botanical Society in northwest Athens offers a glimpse of the remnant native forests of the Post Oak Savannah. Follow the trails across a small suspension bridge, skirting a bog where you may spot wildlife like birds, snakes, and other reptiles. There’s also a cultivated area featuring butterfly and botanical gardens, and the restored white clapboard Wofford House built in 1852. Then check into the historic century house on the hill at Tara Vineyard & Winery, just 5 miles northwest. The impressive Victorian-style home dates to the 1880s. The wraparound porch looks out on rolling hills roped by vines worthy of Tuscany. The Cellar Door at Tara Winery specializes in beef and seafood dishes that can be paired with the vineyard’s vintages, from cool, sweet whites to the top-selling Carriage House red.
+
+Just 20 minutes from Athens, Purtis Creek State Park—with its shaded campsites and a 355-acre lake—has been popular with nature lovers since it opened in 1988. If you didn’t bring your own boat, take advantage of the new TPWD Paddle EZ program and rent a stand-up paddleboard or kayak from the self-service kiosk. The lake has stellar catch-and-release bass fishing and limited motorized traffic, so it’s a peaceful place to explore. Nearby woodlands were popular hunting grounds for the Wichita and Caddo tribes, and modern-day hikers and bikers will find about 6 miles of trail to explore. It’s the perfect place to park after a long weekend in the post oaks.
+
+</Column>
+
+<Column colSm={12} colMd={4} colLg={4}>
 
 ### Piney Woods Texas State Parks: Hidden gems
 
@@ -66,29 +97,22 @@ Walk the trails beneath 100-foot pines. Dive into the pristine water. Paddle, fi
 
 For more information, directions, and amenities, get your [free mobile guide to all 80-plus state parks](https://texasstateparks.org/app).
 
+<AdGroup id={['ad54','ad55','ad56']}/>
+
 </Column>
 
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
-
-![Fried catfish, coleslaw, fries, and hushpuppies in a red-checkered paper-lined basket](images/catfish-plate-boathouse-bar-grill.jpg)
-<Caption>Catfish plate at The Boathouse Bar & Grill, Post Oak Savannah. Photo by Dave Shafer.</Caption>
-
-The Texas Freshwater Fisheries Center on Lake Athens has exhibits featuring assorted aquatic environments and an alligator enclosure. Other attractions include the Texas Freshwater Fishing Hall of Fame, which offers plaques and videos dedicated to the many anglers, writers, and business people who have made the Lone Star State a world-class destination for fishing. Athens is also where the Texas Parks and Wildlife Toyota ShareLunker Program—dedicated to growing bigger largemouth bass in Texas—is headquartered. A gallery offers taxidermy models of some of the largest fish ever pulled from Texas lakes and rivers. There’s also a chance to see the “lunker bunker” where bass are bred, and a tram tour of the production ponds covering 37 acres. Afterward, try your luck at the center’s pond, where trout, catfish, and bluegill are stocked. Rods, tackle, and bait are provided with the price of admission.
-
-The peaceful 104-acre East Texas Arboretum and Botanical Society in northwest Athens offers a glimpse of the remnant native forests of the Post Oak Savannah. Follow the trails across a small suspension bridge, skirting a bog where you may spot wildlife like birds, snakes, and other reptiles. There’s also a cultivated area featuring butterfly and botanical gardens, and the restored white clapboard Wofford House built in 1852. Then check into the historic century house on the hill at Tara Vineyard & Winery, just 5 miles northwest. The impressive Victorian-style home dates to the 1880s. The wraparound porch looks out on rolling hills roped by vines worthy of Tuscany. The Cellar Door at Tara Winery specializes in beef and seafood dishes that can be paired with the vineyard’s vintages, from cool, sweet whites to the top-selling Carriage House red.
-
-Just 20 minutes from Athens, Purtis Creek State Park—with its shaded campsites and a 355-acre lake—has been popular with nature lovers since it opened in 1988. If you didn’t bring your own boat, take advantage of the new TPWD Paddle EZ program and rent a stand-up paddleboard or kayak from the self-service kiosk. The lake has stellar catch-and-release bass fishing and limited motorized traffic, so it’s a peaceful place to explore. Nearby woodlands were popular hunting grounds for the Wichita and Caddo tribes, and modern-day hikers and bikers will find about 6 miles of trail to explore. It’s the perfect place to park after a long weekend in the post oaks.
-
+<Column colSm={12} colMd={4} colLg={8}>
+<RegionListing title="Piney Woods" color="green" region="PINEY WOODS" ads={['ad47','ad53','ad56','ad52','ad48','ad50','ad51']}/>
 </Column>
-</Row>
 
-<Row>
-<Column colSm={12} colMd={6} colLg={8}>
-<RegionListing title="Piney Woods" color="green" region="PINEY WOODS"/>
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad46','ad54','ad55','ad47','ad53','ad56','ad52','ad48','ad50','ad51']}/>
+<AdGroup id={['ad56','ad52','ad48','ad50','ad51','ad49','ad57','ad49','ad57']}/>
 </Column>
+
 </Row>
 
 <!-- 
