--- a/src/pages/regions/prairies-and-lakes.mdx
+++ b/src/pages/regions/prairies-and-lakes.mdx
@@ -21,7 +21,7 @@ From fast-moving rides to slow-moving experiences, the heartland of Texas offers
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={12} colMd={4} colLg={8}>
 
 ## **Corsicana**
 ### The Northeast Texas town is a hub for art, film, and television
@@ -49,9 +49,15 @@ For 79 years, the Old Mexican Inn Restaurant and Cantina has been a staple in th
 
 The Warehouse Living Arts Center is a gallery and performance space that has long been an important hub of artistic expression in Corsicana. Founded in the 1970s, it’s one of a handful of venues—along with the Palace Theatre, the Corsicana Opry, and Outside the Lines Creative Studios—where visitors can enjoy theatrical productions, stand-up comedy, or live music. The Warehouse’s lineup features a mix of modern and classic shows like the musical Gypsy.
 
+![A statue of a man in a white chef's hat holding a cake.](images/collin-street-bakery.jpg)
+<Caption>A statue honoring Collin Street Bakery and its famous DeLuxe Fruitcake stands on Main Street in Corsicana. Photo by Tom McCarthy Jr.</Caption>
+
 </Column>
 
-<Column colSm={12} colMd={2} colLg={4}>
+<Column colSm={12} colMd={4} colLg={4}>
+
+<AdGroup id={['ad61']}/>
+<AdGroup id={['ad74']}/>
 
 ### Prairies and Lakes Texas State Parks: Hidden gems
 
@@ -91,10 +97,13 @@ For more information, directions, and amenities, get your [free mobile guide to 
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
+  <Column colSm={6} colMd={3} colLg={4}>
+    <AdGroup id={['ad63','ad69','ad65','ad86']}/>
+  </Column>
+</Row>
 
-![A statue of a man in a white chef's hat holding a cake.](images/collin-street-bakery.jpg)
-<Caption>A statue honoring Collin Street Bakery and its famous DeLuxe Fruitcake stands on Main Street in Corsicana. Photo by Tom McCarthy Jr.</Caption>
+<Row>
+<Column colSm={12} colMd={6} colLg={8}>
 
 No visit to Corsicana is complete without a stop at the world-famous Collin Street Bakery. While the pastry shop is best known for its fruitcakes, it also serves coffee and breakfast items like sausage rolls and biscuits. Many of its pastries are available to order online. 
 
@@ -115,12 +124,29 @@ Tucker Town Restaurant, about 6 miles southeast of town on State Highway 287, of
 While Netflix fans will eventually lose interest in Corsicana and its championship cheer squad, the town will continue to not just endure, but thrive. You might still rub shoulders with roughnecks, ranchers, and farmers at the local coffee shop, but it will be right next to painters, sculptors, and performers. All those influences create a culture that’s tough to replicate and hard to forget. 
 
 </Column>
+
+<Column colSm={12} colMd={4} colLg={4}>
+
+<AdGroup id={['ad78']}/>
+<AdGroup id={['ad79']}/>
+<AdGroup id={['ad81']}/>
+
+</Column>
+
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
-<RegionListing title="Prairies and Lakes" color="teal" region="PRAIRIES AND LAKES"/>
+<Column colSm={12} colMd={4} colLg={8}>
+<RegionListing title="Prairies and Lakes" color="teal" region="PRAIRIES AND LAKES" ads={['ad66','ad67','ad68','ad71','ad85','ad58','ad59','ad60','ad62','ad64','ad63','ad69','ad65','ad86']}/>
 </Column>
+
+<Column colSm={12} colMd={4} colLg={4}>
+
+<AdGroup id={['ad77','ad75','ad76','ad83','ad61','ad74','ad78']}/>
+<AdGroup id={['ad70','ad82','ad84','ad72','ad80','ad79','ad81']}/>
+
+</Column>
+
 </Row>
 
 <!--
