--- a/src/pages/regions/south-texas-plains.mdx
+++ b/src/pages/regions/south-texas-plains.mdx
@@ -21,7 +21,7 @@ Abundant nature-viewing and vibrant cultural opportunities proliferate from the 
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={12} colMd={4} colLg={8}>
 
 ## **Chasing butterflies**
 ### Retreat to the Rio Grande Valley for natural wonders and border culture
@@ -33,20 +33,32 @@ The weather in tropical South Texas is inviting year-round, but the very best ti
 
 Just up the road from the National Butterfly Center in Mission, The Bryan House bed-and-breakfast makes a terrific place to land. Owner Ariel King is a Texas master naturalist, and the grounds are a butterfly hot spot featured on eco-tours of the region.
 
+The house itself was home to former U.S. Secretary of State William Jennings Bryan, a Nebraskan who began wintering in the Valley in 1909 because the warmer climate was beneficial for his wife’s arthritis. King has painstakingly restored the farmhouse to its former glory, complete with nods to both Bryan and butterflies in the form of campaign paraphernalia, butterfly-patterned pillows, and a library generously stocked with biographies and field guides. Before you retire to bed, consider driving a few blocks to The Loretto at Mission, where you can enjoy a sumptuous dinner of fish tacos in homemade flour tortillas with a creamy Sriracha-lime sauce.
+
+Compared to birders, who hit the trails at the crack of dawn, butterfliers have it easy: Sun-loving butterflies don’t really become active until at least 9 a.m. That leaves plenty of time for savoring a requested breakfast of waffles and tacos delivered piping hot to the dining area or your room at the B&B.
+
 </Column>
 
-<Column colSm={12} colMd={2} colLg={4}>
+<Column colSm={6} colMd={4} colLg={4}>
+
+<AdGroup id={['ad90']}/>
+<AdGroup id={['ad92']}/>
 
 </Column>
 
 </Row>
 
 <Row>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad87']}/>
+</Column>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad88']}/>
+</Column>
+</Row>
+
+<Row>
 <Column colSm={12} colMd={6} colLg={8}>
-
-The house itself was home to former U.S. Secretary of State William Jennings Bryan, a Nebraskan who began wintering in the Valley in 1909 because the warmer climate was beneficial for his wife’s arthritis. King has painstakingly restored the farmhouse to its former glory, complete with nods to both Bryan and butterflies in the form of campaign paraphernalia, butterfly-patterned pillows, and a library generously stocked with biographies and field guides. Before you retire to bed, consider driving a few blocks to The Loretto at Mission, where you can enjoy a sumptuous dinner of fish tacos in homemade flour tortillas with a creamy Sriracha-lime sauce.
-
-Compared to birders, who hit the trails at the crack of dawn, butterfliers have it easy: Sun-loving butterflies don’t really become active until at least 9 a.m. That leaves plenty of time for savoring a requested breakfast of waffles and tacos delivered piping hot to the dining area or your room at the B&B.
 
 Fueled for the day, head for the National Butterfly Center, which the North American Butterfly Association established in 2003 to further its mission of butterfly habitat conservation. The helpful staff in the visitor center can supply you with maps, field guides, and a butterfly checklist. From there, it’s off to explore the center’s 100 acres of butterfly gardens, woodland trails, and bird- and butterfly-viewing areas. The sheer number of butterflies alone is cause for wonder, but what makes the experience truly incredible is the kaleidoscope of colors. Some of the more brilliant winged residents include enormous blue-and-purple pipevine swallowtails; electric-green malachites; and the zebra heliconian, whose black-and-white stripes really do resemble its namesake’s.
 
@@ -69,6 +81,7 @@ Among the Valley’s network of ecotourism destinations is the South Padre Islan
 My trip, which I’d planned for the second week of November, happened to come a week too late. Still, park naturalist Javier Gonzalez showed me a video he’d taken of a single evergreen tenaza tree pulsating with the incredible sight of hundreds of butterfly royalty. “For one or two days,” Gonzalez said, “our gardens are filled with monarchs. Then they’ll just keep going.”
 
 All the more reason, I thought, to hit the butterfly trail again next year. 
+
 </Column>
 
 <Column colSm={12} colMd={2} colLg={4}>
@@ -98,9 +111,22 @@ For more information, directions, and amenities, get your [free mobile guide to 
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad89']}/>
+</Column>
+</Row>
+
+<Row>
+<Column colSm={12} colMd={4} colLg={8}>
 <RegionListing title="South Texas Plains" color="purple" region="SOUTH TEXAS PLAINS"/>
 </Column>
+
+<Column colSm={6} colMd={4} colLg={4}>
+  <AdGroup id={['ad89','ad91']}/>
+  <AdGroup id={['ad87','ad88']}/>
+  <AdGroup id={['ad90','ad92']}/>
+</Column>
+
 </Row>
 
 <!-- 
