--- a/src/pages/regions/hill-country.mdx
+++ b/src/pages/regions/hill-country.mdx
@@ -21,11 +21,13 @@ A bucolic landscape rich with cultural and natural attractions reflects Texas’
 
 <Row>
 
-<Column colSm={12} colMd={6} colLg={8}>
+<Column colSm={6} colMd={4} colLg={8}>
 
 ## **A Haven in the Hills**
 ### Find Hill Country heritage in Kendall County
 **By Joe Nick Patoski**
+
+<AdGroup id={['ad32']}/>
 
 Kendall County—about 50 miles northwest of San Antonio—is growing fast, thanks to urban sprawl. Luckily, it’s still maintained its idyllic Hill Country charm and unspoiled views. It might be tempting to roll other destinations, like Fredericksburg, New Braunfels, and Bandera, into a three-day weekend in the area. But sticking to Kendall County, which encompasses hamlets like Sisterdale, Waring, and Kendalia, offers more than enough to fill an itinerary. This rural county provides a more relaxing and less crowded trip, with historic dance halls, abundant live music, and the requisite Guadalupe River.
 
@@ -45,12 +47,26 @@ Following Zoeller Lane from Waring, through farm fields, leads back to FM 473. T
 
 </Column>
 
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad23']}/>
+<AdGroup id={['ad33']}/>
+<AdGroup id={['ad29']}/>
+</Column>
+
 </Row>
+
+<Row>
+<Column colSm={6} colMd={3} colLg={4}>
+<AdGroup id={['ad27']}/>
+</Column>
+<Column colSm={6} colMd={3} colLg={4}>
+</Column>
+</Row>
+
 
 <Row>
 
 <Column colSm={12} colMd={6} colLg={8}>
-
 
 ![Clear water reflects the sunlight and golden cover of trees along the shore](images/guadalupe-river-comfort.jpg)
 <Caption>The Guadalupe River flows through James Kiehl Park in Comfort. Photo by Kenny Braun.</Caption>
@@ -106,7 +122,12 @@ For more information, directions, and amenities, get your [free mobile guide to 
 </Row>
 
 <Row>
-<Column colSm={12} colMd={6} colLg={8}>
-<RegionListing title="Hill Country" color="blue" region="HILL COUNTRY"/>
+<Column colSm={6} colMd={4} colLg={8}>
+<RegionListing title="Hill Country" color="blue" region="HILL COUNTRY" ads={['ad27','ad25','ad26','ad31','ad24','ad30']}/>
 </Column>
+
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad32','ad23','ad33','ad29','ad27','ad25','ad26','ad31','ad24','ad30','ad28']}/>
+</Column>
+
 </Row>
