Added featured image meta, refactored search component

--- a/src/pages/advertiser-index.mdx
+++ b/src/pages/advertiser-index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Advertiser Index"
 description: Read more about the advertisers featured in the Texas State Travel Guide
+featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser-index.jpg'
 ---
 
 <Row>
