--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,3 +1,9 @@
+---
+title: "Welcome to Texas!"
+description: Start your Texas travel journey with the state Travel Guide
+featuredImage: 'https://travelguide.texashighways.com/images/featured/index.jpg'
+---
+
 import HomepageTemplate from 'gatsby-theme-carbon/src/templates/Homepage';
 export default HomepageTemplate;
 
