--- a/src/pages/quick-tour/index.mdx
+++ b/src/pages/quick-tour/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Texas: A Quick Tour"
 description: Visit these outdoor destinations to enjoy the grand diversity of the state’s landscapes and habitats.
+featuredImage: 'https://travelguide.texashighways.com/images/featured/quick-tour.jpg'
 ---
 
 export const Title = () => (
