--- a/src/pages/regions/big-bend-country.mdx
+++ b/src/pages/regions/big-bend-country.mdx
@@ -1,6 +1,7 @@
 ---
 title: Big Bend Country
 description: Adventure, scenic hikes, and wide-open spaces beckon visitors to landscapes little changed since the days of the Wild West
+featuredImage: 'https://travelguide.texashighways.com/images/featured/big-bend-country.jpg'
 ---
 
 export const Title = () => (
