--- a/src/pages/regions/hill-country.mdx
+++ b/src/pages/regions/hill-country.mdx
@@ -1,6 +1,7 @@
 ---
 title: Hill Country
 description: A bucolic landscape rich with cultural and natural attractions reflects Texas’ rural heritage
+featuredImage: 'https://travelguide.texashighways.com/images/featured/hill-country.jpg'
 ---
 
 export const Title = () => (
