--- a/src/pages/regions/panhandle-plains.mdx
+++ b/src/pages/regions/panhandle-plains.mdx
@@ -1,6 +1,7 @@
 ---
 title: Panhandle Plains
 description: Big skies, sweeping sunsets, and breathtaking vistas characterize this region, where something new is always on the horizon
+featuredImage: 'https://travelguide.texashighways.com/images/featured/panhandle-plains.jpg'
 ---
 
 export const Title = () => (
