--- a/src/pages/regions/piney-woods.mdx
+++ b/src/pages/regions/piney-woods.mdx
@@ -1,6 +1,7 @@
 ---
 title: Piney Woods
 description: Beaches, art, history, and wildlife merge in a place where big-city sophistication meets seaside relaxation
+featuredImage: 'https://travelguide.texashighways.com/images/featured/piney-woods.jpg'
 ---
 
 export const Title = () => (
