--- a/src/pages/regions/prairies-and-lakes.mdx
+++ b/src/pages/regions/prairies-and-lakes.mdx
@@ -1,6 +1,7 @@
 ---
 title: Prairies and Lakes
 description: From fast-moving rides to slow-moving experiences, the heartland of Texas offers something for everyone
+featuredImage: 'https://travelguide.texashighways.com/images/featured/prairies-and-lakes.jpg'
 ---
 
 export const Title = () => (
