--- a/src/pages/regions/south-texas-plains.mdx
+++ b/src/pages/regions/south-texas-plains.mdx
@@ -1,6 +1,7 @@
 ---
 title: South Texas Plains
 description: Abundant nature-viewing and vibrant cultural opportunities proliferate from the brush country to the Lower Rio Grande Valley
+featuredImage: 'https://travelguide.texashighways.com/images/featured/south-texas-plains.jpg'
 ---
 
 export const Title = () => (
