--- a/src/pages/road-trips/black-history.mdx
+++ b/src/pages/road-trips/black-history.mdx
@@ -1,6 +1,7 @@
 ---
 title: Black History Road Trip
 description: Four places that honor and commemorate the Black experience in Texas
+featuredImage: 'https://travelguide.texashighways.com/images/featured/black-history.jpg'
 ---
 
 <PageDescription>
