--- a/src/pages/road-trips/boogie-woogie-highway.mdx
+++ b/src/pages/road-trips/boogie-woogie-highway.mdx
@@ -1,6 +1,7 @@
 ---
 title: Birthplace of Boogie Woogie
-description: Four places that honor and commemorate the Black experience in Texas
+description: The Boogie Woogie Highway traverses the origins of rock ’n’ roll
+featuredImage: 'https://travelguide.texashighways.com/images/featured/boogie-woogie-highway.jpg'
 ---
 
 <PageDescription>
