--- a/src/pages/road-trips/cattle-drives.mdx
+++ b/src/pages/road-trips/cattle-drives.mdx
@@ -1,6 +1,7 @@
 ---
 title: From Cattle Drives to Road Trips
 description: Explore Texas’ cowboy roots on the Chisholm Trail and other cattle-driving routes
+featuredImage: 'https://travelguide.texashighways.com/images/featured/cattle-drives.jpg'
 ---
 
 export const Title = () => (
