--- a/src/pages/road-trips/ghost-towns.mdx
+++ b/src/pages/road-trips/ghost-towns.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Population: Between Zero and Unknown"
 description: A ghost town road trip through North Central Texas
-
+featuredImage: 'https://travelguide.texashighways.com/images/featured/ghost-towns.jpg'
 ---
 
 <PageDescription>
