--- a/src/pages/road-trips/mural-trail.mdx
+++ b/src/pages/road-trips/mural-trail.mdx
@@ -1,6 +1,7 @@
 ---
 title: Murals Are El Paso’s History Books
 description: Artist Jesus “Cimi” Alvarado teaches Chicano culture through artworks on the streets of El Segundo Barrio
+featuredImage: 'https://travelguide.texashighways.com/images/featured/mural-trail.jpg'
 ---
 
 <PageDescription>
