--- a/src/pages/road-trips/roadside-eats.mdx
+++ b/src/pages/road-trips/roadside-eats.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Roadside Eats"
 description: Chow down on home-cooked meals at these mom and pop restaurants
+featuredImage: 'https://travelguide.texashighways.com/images/featured/roadside-eats.jpg'
 ---
 
 <PageDescription>
