--- a/src/pages/road-trips/swimming-holes.mdx
+++ b/src/pages/road-trips/swimming-holes.mdx
@@ -1,6 +1,7 @@
 ---
 title: Swimming Hole Trail
 description: Travel along Interstate 35 for some of the best swimming in the state, plus daring rope swings
+featuredImage: 'https://travelguide.texashighways.com/images/featured/swimming-hole-trail.jpg'
 ---
 
 <PageDescription>
