--- a/src/pages/road-trips/top-of-texas.mdx
+++ b/src/pages/road-trips/top-of-texas.mdx
@@ -1,6 +1,7 @@
 ---
 title: "To the Top of Texas"
 description: Paving the way for accessibility at state parks
+featuredImage: 'https://travelguide.texashighways.com/images/featured/top-of-texas.jpg'
 ---
 
 <PageDescription>
