--- a/src/pages/road-trips/wildflower-drives.mdx
+++ b/src/pages/road-trips/wildflower-drives.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Wildflower Drives"
 description: Add some color to your spring road trip with these four scenic routes
+featuredImage: 'https://travelguide.texashighways.com/images/featured/wildflower-drives.jpg'
 ---
 
 <PageDescription>
