--- a/src/pages/texas-beverage-tour/index.mdx
+++ b/src/pages/texas-beverage-tour/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Texas Beverage Tour"
 description: Taste, toast, and tour your way across the state’s alcoholic offerings
+featuredImage: 'https://travelguide.texashighways.com/images/featured/texas-beverage-tour.jpg'
 ---
 
 <PageDescription>
