--- a/src/pages/travel-information/index.mdx
+++ b/src/pages/travel-information/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Travel Information
 description: Everything you need to know about traveling in Texas.
+featuredImage: 'https://travelguide.texashighways.com/images/featured/travel-information.jpg'
 ---
 
 <PageDescription>
@@ -174,7 +175,7 @@ If you are planning to cross into Mexico during your stay in Texas, consider a s
 
 Before going, learn as much as possible about Mexico and use common sense during the trip. Visit the [U.S. Department of State](https://travel.state.gov) to see any applicable Travel Alerts and Tips for Traveling Abroad.
 
-<InlineNotification kind="warning">
+<InlineNotification kind="warning" className="">
 
 **Warning**: Possession/importation of any type of fire­arm, weapon, or ammunition is a felony in Mexico without advance written authorization from the Mexican Embassy in Washington, D.C., or from a Mexican  Consulate in the United States.
 
