--- a/src/pages/regions/gulf-coast.mdx
+++ b/src/pages/regions/gulf-coast.mdx
@@ -1,6 +1,7 @@
 ---
 title: Gulf Coast
 description: Beaches, art, history, and wildlife merge in a place where big-city sophistication meets seaside relaxation
+featuredImage: 'https://travelguide.texashighways.com/images/featured/gulf-coast.jpg'
 ---
 
 export const Title = () => (
