--- a/src/pages/road-trips/railroad-hotels.mdx
+++ b/src/pages/road-trips/railroad-hotels.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Railroad Hotels"
 description: Sleep amid history in Kingsland, Slaton, Flatonia, Palestine, and Alpine
-
+featuredImage: 'https://travelguide.texashighways.com/images/featured/railroad-hotels.jpg'
 ---
 
 <PageDescription>
