--- a/src/pages/things-to-do-in-texas/index.mdx
+++ b/src/pages/things-to-do-in-texas/index.mdx
@@ -1,22 +1,28 @@
 ---
 title: "Search All Listings"
 description: Find things to do and places to visit across Texas using this page
+featuredImage: 'https://travelguide.texashighways.com/images/featured/things-to-do-in-texas.jpg'
 ---
 
 <PageDescription>
 
-Search all listings we have in our Travel Guide
+Search all listings in the Texas State Travel Guide. 
 
 </PageDescription>
 
 <Row>
+<Column colSm={6} colMd={4} colLg={8}>
 
-<Column colSm={12} colMd={5} colLg={8}>
-<SearchListings/>
+Try a city name, like "Austin," or an attraction name, like "State Capitol Complex"
+
+<SimpleSearch/>
+
 </Column>
 
-<Column colSm={12} colMd={3} colLg={4}>
-
+<Column colSm={6} colMd={4} colLg={4}>
+<AdGroup id={['ad32','ad09','ad37','ad90','ad04','ad23','ad33','ad36','ad61','ad74','ad78','ad79','ad81','ad92','ad34','ad70','ad84','ad72','ad80','ad15','ad75','ad20','ad45','ad41','ad06','ad40','ad28','ad29','ad91','ad82','ad77','ad76','ad83','ad46','ad54','ad55','ad56','ad49','ad57','ad38','ad43','ad13','ad18','ad02']}/>
+<AdGroup id={['ad32','ad09','ad37','ad90','ad04','ad23','ad33','ad36','ad61','ad74','ad78','ad79','ad81','ad92','ad34','ad70','ad84','ad72','ad80','ad15','ad75','ad20','ad45','ad41','ad06','ad40','ad28','ad29','ad91','ad82','ad77','ad76','ad83','ad46','ad54','ad55','ad56','ad49','ad57','ad38','ad43','ad13','ad18','ad02']}/>
+<AdGroup id={['ad32','ad09','ad37','ad90','ad04','ad23','ad33','ad36','ad61','ad74','ad78','ad79','ad81','ad92','ad34','ad70','ad84','ad72','ad80','ad15','ad75','ad20','ad45','ad41','ad06','ad40','ad28','ad29','ad91','ad82','ad77','ad76','ad83','ad46','ad54','ad55','ad56','ad49','ad57','ad38','ad43','ad13','ad18','ad02']}/>
 </Column>
 
 </Row>
