Bug fixes on search, homepage featured image

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to Texas!"
-description: Start your Texas travel journey with the state Travel Guide
+description: Everything you need to know about travel destinations in Texas
 featuredImage: 'https://travelguide.texashighways.com/images/featured/index.jpg'
 ---
 
