Fixed Cedar Hill name, search bug

--- a/src/pages/advertiser-index.mdx
+++ b/src/pages/advertiser-index.mdx
@@ -59,7 +59,7 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 ## Hill Country
 
-[Austin Parks & Recreation, City of](https://austintexas.gov/historicatxparks)
+[Austin Parks &amp; Recreation, City of](https://austintexas.gov/historicatxparks)
 
 [Bandera County CVB](https://www.banderacowboycapital.com/)
 
@@ -69,7 +69,7 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Cedar Park, City of](https://cedarparkfun.com/)
 
-[Comfort Chamber of Commerce ](https://www.comfortchamber.com/)
+[Comfort Chamber of Commerce](https://www.comfortchamber.com/)
 
 [Fredericksburg CVB](https://www.visitfredericksburgtx.com/)
 
@@ -83,7 +83,7 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 ## Panhandle Plains
 
-[Abilene CVB ](https://abilenevisitors.com)
+[Abilene CVB](https://abilenevisitors.com)
 
 [Amarillo CVB](https://www.visitamarillo.com/)
 
@@ -101,7 +101,7 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [San Angelo CVB](https://www.discoversanangelo.com/)
 
-[Visit Lubbock ](https://visitlubbock.org/)
+[Visit Lubbock](https://visitlubbock.org/)
 
 </Column>
 
@@ -109,17 +109,17 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 ## Piney Woods
 
-[City of Mineola ](https://VisitMineola.com)
+[City of Mineola](https://VisitMineola.com)
 
-[Henderson, City of ](http://www.visithendersontx.com/)
+[Henderson, City of](http://www.visithendersontx.com/)
 
-[Huntsville, City of ](http://huntsvilletexas.com/)
+[Huntsville, City of](http://huntsvilletexas.com/)
 
 [Longview, City of, Tourism](https://www.visitlongviewtexas.com/)
 
 [Marshall, City of, Visit Marshall](http://visitmarshalltexas.com/)
 
-[Palestine Visitors Center ](https://www.visitpalestine.com/)
+[Palestine Visitors Center](https://www.visitpalestine.com/)
 
 [Shenandoah CVB](https://www.visitshenandoahtx.com/)
 
@@ -131,13 +131,13 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Visit Kilgore](https://visitkilgore.com/)
 
-[Visit Tyler ](https://visittyler.com/)
+[Visit Tyler](https://visittyler.com/)
 
 ## Prairies and Lakes
 
 [Cameron Park Zoo](https://www.cameronparkzoo.com/)
 
-[Canton Visitors Bureau, City of ](https://www.firstmondaycanton.com/)
+[Canton Visitors Bureau, City of](https://www.firstmondaycanton.com/)
 
 [Celina Economic Development Corporation](https://www.lifeincelinatx.com/)
 
@@ -145,7 +145,7 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Cleburne Chamber of Commerce](https://www.visitcleburne.com/)
 
-[Cuero Chamber of Commerce, Agriculture & Visitors Bureau ](https://cuero.org/)
+[Cuero Chamber of Commerce, Agriculture & Visitors Bureau](https://cuero.org/)
 
 [Denton CVB](https://www.discoverdenton.com/)
 
@@ -173,19 +173,19 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Paris CVB/Lamar County Chamber of Commerce](https://netexastrail.org/)
 
-[Rockdale, City of ](http://rockdalecityhall.com/9/Visitors)
+[Rockdale, City of](http://rockdalecityhall.com/9/Visitors)
 
 [The Colony CVB](https://visitthecolonytx.com/)
 
 [Visit Bastrop](https://visitbastrop.com)
 
-[Visit Cedar Hill Tx-Cedar Hill Tourims](https://www.visitcedarhilltx.com)
+[Visit Cedar Hill Tx-Cedar Hill Tourism](https://www.visitcedarhilltx.com)
 
 [Visit College Station ](https://visit.cstx.gov)
 
 [Visit Garland, Garland CVB ](http://cantresistgarland.com/)
 
-[Visit Granbury, City of Grandbury](https://www.visitgranbury.com/)
+[Visit Granbury, City of Granbury](https://www.visitgranbury.com/)
 
 [Visit Plano, Plano CVB](https://www.visitplano.com/)
 
